aggiornato il codice in modo tale che quando l'utente chiede la lista di conversazioni il nome della chat sara quello dell utente con cui sta parlando indipendentemente da chi l'abbia creata la chat, piu aggiunte alcune verifiche per campi invalidi. POST /conversations /session GET /conversations funzionanti!
